--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -168,7 +168,7 @@
     
         <div class="col-sm-2 well">
           <div class="thumbnail">
-            <p><strong>Messages</strong></p>
+            <p><strong>Requests</strong></p>
             <!--<p ng-repeat="res in found" ng-bind="res"></p>
             <p>Welcome</p>
             <p>Welcome</p>
