--- a/templates/editpro.html
+++ b/templates/editpro.html
@@ -1,6 +1,11 @@
 {% extends "dashboard.html" %}
 
 {% block profile %}
+    <p class="panel-title"><a data-toggle="collapse" href="#collapse1">{{username}}</a></p>
+    <img src="static/images/bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
+  
+    </div>
+    <div id="collapse1" class="panel-collapse collapse">
 
     <div class="panel-body">Username: {{username}}</div>
   {% for profinfo in profinfo %}
@@ -26,20 +31,12 @@
               <tbody align="justify">
                 <form method="POST" action="/updateprofile">
 
-<<<<<<< HEAD
                     <tr align="left">Upload Image: <input type="file" name="pic" accept="image/*"></tr>
                     <tr align="left">{{message}}</tr>
                     <tr align="left"><td>Username: <input type="text" id="username" name="username" size=63%></td></tr>
                     <tr align="left"><td>Name: <input type="text" id="name" name="name" size=63%></></td></tr>
                     <tr align="left"><td>New Password: <input type="password" id="newpassword" name="newpassword" size=63%></></td></tr>
                     <tr align="left"><td>Confirm Password: <input type="password" id="confirmpassword" name="confirmpassword" size=63%></></td></tr>
-=======
-                    <tr align="right">{{message}}</tr>
-                    <tr align="right"><td>Username: <input type="text" id="username" name="username" size=63%></td></tr>
-                    <tr align="right"><td>Name: <input type="text" id="name" name="name" size=63%></></td></tr>
-                    <tr align="right"><td>New Password: <input type="password" id="newpassword" name="newpassword" size=63%></></td></tr>
-                    <tr align="right"><td>Confirm Password: <input type="password" id="confirmpassword" name="confirmpassword" size=63%></></td></tr>
->>>>>>> parent of 546e3bb... fixed word alignment
                     <tr align="center">
                     {% for userT in userT %}
                     {% if userT[0] == 'Giver' %}           
